--- a/src/DroplinePanel.module.css
+++ b/src/DroplinePanel.module.css
@@ -20,7 +20,25 @@
   white-space: nowrap; /* Prevent text from wrapping prematurely */
 }
 
-.dropline-panel::before {
+/* .dropline-panel::before {
+  content: '';
+  position: absolute;
+  bottom: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 0;
+  height: 0;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid #34495e; /* Arrow pointing up * /
+} */
+.on-top {
+  top: 100%;
+  bottom: auto;
+  margin-top: -10px;
+}
+
+.on-top::after {
   content: '';
   position: absolute;
   bottom: 100%;
@@ -31,6 +49,25 @@
   border-left: 6px solid transparent;
   border-right: 6px solid transparent;
   border-bottom: 6px solid #34495e; /* Arrow pointing up */
+}
+
+.on-bottom {
+  bottom: 100%;
+  top: auto;
+  margin-bottom: -10px;
+}
+
+.on-bottom::after {
+  content: '';
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 0;
+  height: 0;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 6px solid #34495e; /* Arrow pointing down */
 }
 
 .dropline-icon {
