--- a/src/AfterMatchStats.module.css
+++ b/src/AfterMatchStats.module.css
@@ -8,6 +8,16 @@
   z-index: 100;
   width: fit-content;
   margin: 0 auto;
+  transition: opacity 0.5s ease, transform 0.5s ease;
+  opacity: 0; 
+}
+
+.fade-in {
+  opacity: 1;
+}
+
+.fade-out {
+  opacity: 0;
 }
 
 .info-header {
