--- a/src/LowerThirdMatchup.module.css
+++ b/src/LowerThirdMatchup.module.css
@@ -8,6 +8,16 @@
   z-index: 100;
   max-width: 60%;
   box-sizing: border-box;
+  transition: opacity 0.5s ease, transform 0.5s ease;
+  opacity: 0; 
+}
+
+.fade-in {
+  opacity: 1;
+}
+
+.fade-out {
+  opacity: 0;
 }
 
 .lower-third-container {
