--- a/src/MatchupPresentation.module.css
+++ b/src/MatchupPresentation.module.css
@@ -2,13 +2,20 @@
 
 .matchup-wrapper {
   z-index: 100;
-}
-
-.matchup-wrapper.centered {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  transition: opacity 0.5s ease, transform 0.5s ease;
+  opacity: 0; 
+}
+
+.fade-in {
+  opacity: 1;
+}
+
+.fade-out {
+  opacity: 0;
 }
 
 .matchup-card {
