--- a/src/TeamComparisonTable.module.css
+++ b/src/TeamComparisonTable.module.css
@@ -8,7 +8,18 @@
   z-index: 100;
   width: fit-content;
   margin: 0 auto;
+  transition: opacity 0.5s ease, transform 0.5s ease;
+  opacity: 0; 
 }
+
+.fade-in {
+  opacity: 1;
+}
+
+.fade-out {
+  opacity: 0;
+}
+
 
 .comparison-table {
   border-collapse: collapse;
