--- a/src/LowerThirdMatchup.module.css
+++ b/src/LowerThirdMatchup.module.css
@@ -2,7 +2,7 @@
 
 .lower-third-wrapper {
   position: fixed;
-  bottom: 200px;
+  bottom: 30px;
   left: 50%;
   transform: translateX(-50%);
   z-index: 100;
@@ -28,7 +28,7 @@
   background-color: #2c3e50;
   color: #ecf0f1;
   font-family: Arial, sans-serif;
-  padding: 15px;
+  padding: 5px;
   border-radius: 10px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
@@ -119,5 +119,7 @@
 }
 
 .competition-logo-img {
-  height: 24px;
+  height: 15px;
+  background-color: #bdc3c7;
+  padding: 2px;
 }
