--- a/src/TeamComparisonTable.module.css
+++ b/src/TeamComparisonTable.module.css
@@ -37,7 +37,7 @@
   text-align: center;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
   gap: 5px;
   min-width: 300px;
